WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198189
DFG::OSREntry should not perform arity check
https://bugs.webkit.org/show_bug.cgi?id=198189
Summary
DFG::OSREntry should not perform arity check
Tadeu Zagallo
Reported
2019-05-23 11:27:57 PDT
The following code compiles 7 times, but never tiers up to DFG because of the arity check: function foo(x, y) { for (var i = 0; i < 1e8; i++) { x[y] += i; } } foo({})
Attachments
Patch
(2.78 KB, patch)
2019-05-23 11:36 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
Patch
(2.79 KB, patch)
2019-05-23 11:43 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2019-05-23 11:36:10 PDT
Created
attachment 370511
[details]
Patch
Tadeu Zagallo
Comment 2
2019-05-23 11:43:20 PDT
Created
attachment 370513
[details]
Patch Fix typo in ChangeLog
WebKit Commit Bot
Comment 3
2019-05-23 13:43:55 PDT
Comment on
attachment 370513
[details]
Patch Clearing flags on attachment: 370513 Committed
r245710
: <
https://trac.webkit.org/changeset/245710
>
WebKit Commit Bot
Comment 4
2019-05-23 13:43:57 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-05-23 13:44:22 PDT
<
rdar://problem/51080799
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug