DFG::OSREntry should not perform arity check https://bugs.webkit.org/show_bug.cgi?id=198189

Reviewed by Saam Barati.

JSTests:

* microbenchmarks/loop-osr-with-arity-mismatch.js: Added.
(foo):

Source/JavaScriptCore:

The check prevents OSR entering from hot loops inside functions that were called
with too few arguments.

* dfg/DFGOSREntry.cpp:
(JSC::DFG::prepareOSREntry):


Canonical link: https://commits.webkit.org/212254@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245710 268f45cc-cd09-0410-ab3c-d52691b4dbfc