JSTests/microbenchmarks/loop-osr-with-arity-mismatch.js
@@ -1,0 +1,6 @@
+function foo(x, y) {
+    for (var i = 0; i < 1e7; i++) {
+        x[y] += i;
+    }
+}
+foo({})
